@@ -1,3 +1,7 @@
+mkdocs-material-4.x.x (2019-06-15)
+
+  * Added Slovenian translations
+
 mkdocs-material-4.3.1 (2019-05-23)
 
   * Fixed spelling error in Danish translations
